--- a/public/css/footer.css
+++ b/public/css/footer.css
@@ -1,4 +1,4 @@
-footer{
+footer {
     position: relative;
     width: 100%;
     padding: 40px 10vw;
@@ -6,23 +6,24 @@ footer{
     background: #383838;
 }
 
-.footer-content{
+.footer-content {
     display: flex;
     width: 100%;
     justify-content: space-between;
 }
 
-.footer-content .logo{
+.footer-content .logo {
     height: 160px;
 }
 
-.footer-ul-container{
+
+.footer-ul-container {
     width: 45%;
     display: flex;
     justify-content: space-between;
 }
 
-.category{
+.category {
     width: 200px;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
@@ -30,7 +31,7 @@ footer{
     list-style: none;
 }
 
-.category-title{
+.category-title {
     grid-column: span 2;
     text-transform: capitalize;
     color: #fff;
@@ -38,44 +39,40 @@ footer{
     margin-bottom: 20px;
 }
 
-.category .footer-link{
+.category .footer-link {
     text-decoration: none;
     text-transform: capitalize;
     color: rgba(255, 255, 255, 0.75);
 }
 
-.footer-link:hover{
+.footer-link:hover {
     color: #fff;
 }
 
-.footer-title, .info{
+.footer-title,
+.info {
     color: rgba(255, 255, 255, 0.75);
     margin: 20px 0;
     text-transform: capitalize;
 }
 
-.footer-title{
+.footer-title {
     margin-top: 80px;
     color: #fff;
 }
 
-.footer-social-container{
+.footer-social-container {
     margin-top: 40px;
     display: flex;
     justify-content: space-between;
 }
 
-.social-link{
-    color: #fff;
-    margin-left: 20px;
-    text-transform: capitalize;
-}
 
-.social-link:nth-child(1){
+.social-link:nth-child(1) {
     margin-left: 0;
 }
 
-.footer-credit{
+.footer-credit {
     width: 100%;
     padding: 10px;
     position: absolute;
@@ -84,4 +81,44 @@ footer{
     text-align: center;
     color: #fff;
     background: rgba(0, 0, 0, 0.2);
+}
+
+.social-link {
+    color: #fff;
+    margin-left: 20px;
+    text-transform: capitalize;
+}
+
+.social-twitter {
+    width: 5px;
+    position: relative;
+    margin: 260px 550px 50px -680px;
+    display: block;
+
+}
+
+
+.social-facebook {
+    width: 5px;
+    position: none;
+    margin: 260px 1000px 20px 10px;
+    display: block;
+
+
+}
+
+.social-instagram {
+    width: 5px;
+    position: absolute;
+    margin: 260px 20px 20px 10px;
+    display: block;
+
+
+}
+
+.formasDePagamentos {
+    width: min-content;
+    position: absolute;
+    margin: 260px 40px 40px 10px;
+    display: block;
 }
