--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,7 +17,7 @@
     <header class="hero-section">
         <div class="content">
             <img src="img/light-logo.png" class="logo" alt="">
-            <p class="sub-heading">best fashion collection of all time</p>
+            <p class="sub-heading">Melhor coleção de moda de todos os tempos</p>
         </div>
     </header>
     <!-- END HERO SECTION -->
