--- a/public/css/product.css
+++ b/public/css/product.css
@@ -1,19 +1,19 @@
-.product-details{
+.product-details {
     width: 100%;
     padding: 60px 10vw;
     display: flex;
     justify-content: space-between;
 }
 
-.image-slider{
+.image-slider {
     width: 500px;
     height: 500px;
     position: relative;
-    background-image: url('../img/product\ image\ 1.png');
+    background-image: url('../img/productImage1.png');
     background-size: cover;
 }
 
-.product-images{
+.product-images {
     position: absolute;
     bottom: 20px;
     left: 50%;
@@ -28,39 +28,39 @@
     padding: 10px;
 }
 
-.product-images img{
+.product-images img {
     width: 100%;
     height: 80px;
     object-fit: cover;
     cursor: pointer;
 }
 
-.product-images img.active{
+.product-images img.active {
     opacity: 0.5;
 }
 
-.details{
+.details {
     width: 50%;
 }
 
-.details .product-brand{
+.details .product-brand {
     text-transform: capitalize;
     font-size: 30px;
 }
 
-.details .product-short-des{
+.details .product-short-des {
     font-size: 25px;
     line-height: 30px;
     height: auto;
     margin: 15px 0 30px;
 }
 
-.product-price{
+.product-price {
     font-weight: 700;
     font-size: 30px;
 }
 
-.product-actual-price{
+.product-actual-price {
     font-size: 30px;
     opacity: 0.5;
     text-decoration: line-through;
@@ -68,19 +68,19 @@
     font-weight: 300;
 }
 
-.product-discount{
+.product-discount {
     color: #ff7d7d;
     font-size: 20px;
 }
 
-.product-sub-heading{
+.product-sub-heading {
     font-size: 30px;
     text-transform: uppercase;
     margin: 60px 0 10px;
     font-weight: 300;
 }
 
-.size-radio-btn{
+.size-radio-btn {
     display: inline-block;
     width: 80px;
     height: 80px;
@@ -96,12 +96,12 @@
     cursor: pointer;
 }
 
-.size-radio-btn.check{
+.size-radio-btn.check {
     background: #383838;
     color: #fff;
 }
 
-.btn{
+.btn {
     width: 48%;
     padding: 20px;
     border-radius: 5px;
@@ -114,23 +114,23 @@
     text-transform: capitalize;
 }
 
-.cart-btn{
+.cart-btn {
     margin-right: 2%;
     background: #383838;
     color: #fff;
 }
 
-.detail-des{
+.detail-des {
     padding: 0 10vw;
     text-transform: capitalize;
 }
 
-.heading{
+.heading {
     font-size: 30px;
     margin-bottom: 30px;
 }
 
-.des{
+.des {
     color: #383838;
     line-height: 25px;
 }
