--- a/views/product.ejs
+++ b/views/product.ejs
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Product - </title>
-    <link rel="stylesheet" href="/css/home.css">
-    <link rel="stylesheet" href="../css/product.css">
+    <link rel="stylesheet" href="./css/home.css">
+    <link rel="stylesheet" href="./css/product.css">
 </head>
 <body>
 
@@ -16,10 +16,10 @@
     <section class="product-details">
         <div class="image-slider">
             <div class="product-images">
-                <img src="img/product image 1.png" class="active" alt="">
-                <img src="img/product image 2.png" alt="">
-                <img src="img/product image 3.png" alt="">
-                <img src="img/product image 4.png" alt="">
+                <img src="/img/productImage1.png" class="active" alt="">
+                <img src="/img/productImage2.png" alt="">
+                <img src="/img/productImage3.png" alt="">
+                <img src="/img/productImage4.png" alt="">
             </div>
         </div>
         <div class="details">
@@ -88,7 +88,7 @@
             <div class="product-card">
                 <div class="product-image">
                     <span class="discount-tag">50% off</span>
-                    <img src="./img/product image 1.png" class="product-thumb" alt="">
+                    <img src="./img/productImage1.png" class="product-thumb" alt="">
                     <button class="card-btn">add to whish list</button>
                 </div>
                 <div class="product-info">
@@ -100,7 +100,7 @@
             <div class="product-card">
                 <div class="product-image">
                     <span class="discount-tag">50% off</span>
-                    <img src="./img/product image 2.png" class="product-thumb" alt="">
+                    <img src="./img/productImage2.png" class="product-thumb" alt="">
                     <button class="card-btn">add to whish list</button>
                 </div>
                 <div class="product-info">
@@ -112,7 +112,7 @@
             <div class="product-card">
                 <div class="product-image">
                     <span class="discount-tag">50% off</span>
-                    <img src="./img/product image 3.png" class="product-thumb" alt="">
+                    <img src="./img/productImage3.png" class="product-thumb" alt="">
                     <button class="card-btn">add to whish list</button>
                 </div>
                 <div class="product-info">
@@ -124,7 +124,7 @@
             <div class="product-card">
                 <div class="product-image">
                     <span class="discount-tag">50% off</span>
-                    <img src="./img/product image 4.png" class="product-thumb" alt="">
+                    <img src="./img/productImage4.png" class="product-thumb" alt="">
                     <button class="card-btn">add to whish list</button>
                 </div>
                 <div class="product-info">
@@ -136,7 +136,7 @@
             <div class="product-card">
                 <div class="product-image">
                     <span class="discount-tag">50% off</span>
-                    <img src="./img/product image 1.png" class="product-thumb" alt="">
+                    <img src="./img/productImage1.png" class="product-thumb" alt="">
                     <button class="card-btn">add to whish list</button>
                 </div>
                 <div class="product-info">
@@ -148,7 +148,7 @@
             <div class="product-card">
                 <div class="product-image">
                     <span class="discount-tag">50% off</span>
-                    <img src="./img/product image 2.png" class="product-thumb" alt="">
+                    <img src="./img/productImage2.png" class="product-thumb" alt="">
                     <button class="card-btn">add to whish list</button>
                 </div>
                 <div class="product-info">
@@ -160,7 +160,7 @@
             <div class="product-card">
                 <div class="product-image">
                     <span class="discount-tag">50% off</span>
-                    <img src="./img/product image 3.png" class="product-thumb" alt="">
+                    <img src="./img/productImage3.png" class="product-thumb" alt="">
                     <button class="card-btn">add to whish list</button>
                 </div>
                 <div class="product-info">
@@ -172,7 +172,7 @@
             <div class="product-card">
                 <div class="product-image">
                     <span class="discount-tag">50% off</span>
-                    <img src="./img/product image 4.png" class="product-thumb" alt="">
+                    <img src="./img/productImage4.png" class="product-thumb" alt="">
                     <button class="card-btn">add to whish list</button>
                 </div>
                 <div class="product-info">
