--- a/views/painel.ejs
+++ b/views/painel.ejs
@@ -1,6 +1,33 @@
-<img src="img/loader.gif" class="loader" alt="">
-
-<div class="container">
-  <img src="img/dark-logo.png" class="logo" alt="">
-  <div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Clothing: Criando a Conta</title>
+    <link rel="stylesheet" href="./css/home.css">
+    <link rel="stylesheet" href="css/signup.css">
+</head>
+<body>  
+        
+    <div class="container">
+        <div class="container-logo">
+            <img src="img/dark-logo.png" class="logo" alt="">
+        </div>       
+        
+       
+        <div>
+          <button class="submit-btn">Meu Cadastro</button>
+          <button class="submit-btn">Pedidos </button>
+          <button class="submit-btn">Pontos </button>
+          <button class="submit-btn">Avaliações </button>
+                                 
+        </div>
+       
+    </div>
+    <div class="descricao"> 
+    <button class="submit-btn">Todos os Pedidos</button> 
+    </div>
     
+</body>
+</html>
