--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="css/signup.css">
 </head>
 <body>
+    <nav class="navbar"></nav>
+    <script src="./js/nav.js"></script>
     
     <img src="img/loader.gif" class="loader" alt="">
 
@@ -34,7 +36,7 @@
         </div>
         <a href="/login" class="link">Já tem uma conta? Faça o log aqui</a>
     </div>
-
+   
     <script src="js/form.js"></script>
 </body>
 </html>
