--- a/public/css/painel.css
+++ b/public/css/painel.css
@@ -4,55 +4,23 @@
   box-sizing: border-box;
 }
 
-
-
 body {
   background-color: #f5f5f5;
   font-family: 'roboto', sans-serif;
 
 }
 
-.painel-user {
-  width: 100%;
-  height: 30%;
-  margin: 0px 50px 50px 50px;
-  padding-top: 200px;
-}
-
-.card {
-  box-shadow: 1px 1px 5px rgb(71, 66, 66);
-  background-color: #ffffff;
-  padding: 5%;
-  border-radius: 5px;
-}
-
-.card-top {
-  display: block;
-  margin: -170px 10px 5px;
-  padding: 50px;
+.container {
+  max-width: 500px;
+  height: 5%;
+  display: flex;
   align-items: flex-start;
-  justify-items: flex-start;
-  color: #383838;
-}
-
-.img-login {
-  width: 100px;
+  margin: 100px;
 
 }
 
-.title {
-  color: #383838;
-  font-family: 'roboto', sans-serif;
-
-}
-
-.card-group {
-  width: 450px;
-  height: 300px;
-  box-shadow: 1px 1px 5px rgb(71, 66, 66);
-  background-color: #ffffff;
-  display: grid;
-  padding: 50px;
+.descricao {
   border-radius: 15px;
+
 
 }
