--- a/views/product.ejs
+++ b/views/product.ejs
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Product - </title>
-    <link rel="stylesheet" href="./css/home.css">
-    <link rel="stylesheet" href="./css/product.css">
+    <link rel="stylesheet" href="/css/home.css">
+    <link rel="stylesheet" href="/css/product.css">
 </head>
 <body>
 
@@ -82,8 +82,8 @@
     <!-- CARDS - CONTAINER SHIRTS -->
     <section class="product">
         <h2 class="product-category">Shirts</h2>
-        <button class="pre-btn"><img src="./img/arrow.png" alt=""></button>
-        <button class="nxt-btn"><img src="./img/arrow.png" alt=""></button>
+        <button class="pre-btn"><img src="/img/arrow.png" alt=""></button>
+        <button class="nxt-btn"><img src="/img/arrow.png" alt=""></button>
         <div class="product-container">
             <div class="product-card">
                 <div class="product-image">
