--- a/views/404.ejs
+++ b/views/404.ejs
@@ -12,7 +12,7 @@
     <nav class="navbar"></nav>
 
     <img src="./img/404.png" class="four-0-four-image" alt="">
-    <p class="four-0-four-msg">look like you are lost. Head to back to our <a href="#">homepage</a></p>
+    <p class="four-0-four-msg">Parece que você está perdido. Dirija-se à nossa página inicial <a href="#">homepage</a></p>
 
     <script src="./js/nav.js"></script>
 </body>
