--- a/views/index.ejs
+++ b/views/index.ejs
@@ -92,7 +92,7 @@
                 <div class="product-image">
                     <span class="discount-tag">10% off</span>
                     <img src="./img/card6.png" class="product-thumb" alt="">
-                    <button class="card-btn">add to whish list</button>
+                    <button class="card-btn">adicionar à lista de desejos</button>
                 </div>
                 <div class="product-info">
                     <h2 class="product-brand">Camisa Clothing</h2>
@@ -261,7 +261,7 @@
                 <div class="product-image">
                     <span class="discount-tag">10% off</span>
                     <img src="./img/card9.png" class="product-thumb" alt="">
-                    <button class="card-btn">add to whish list</button>
+                    <button class="card-btn">adicionar  á lista de desejos</button>
                 </div>
                 <div class="product-info">
                     <h2 class="product-brand">Nike Shoes lx</h2>
@@ -271,14 +271,14 @@
             </div>
             <div class="product-card">
                 <div class="product-image">
-                    <span class="discount-tag">10% off</span>
+                    <span class="discount-tag"></span>
                     <img src="./img/card10.png" class="product-thumb" alt="">
                     <button class="card-btn">adicionar à lista de desejo</button>
                 </div>
                 <div class="product-info">
                     <h2 class="product-brand">Topper</h2>
                     <p class="product-short-des">Tênis Training</p>
-                    <span class="price">$20</span><span class="actual-price">$40</span>
+                    <span class="price">R$200,00</span><span class="actual-price"></span>
                 </div>
             </div>
             <div class="product-card">
