--- a/views/product.ejs
+++ b/views/product.ejs
@@ -30,7 +30,7 @@
             <span class="product-discount">( 10% off )</span>
 
             <p class="product-sub-heading">selecione o tamanho</p>
-
+         <div class="size-group">
             <input type="radio" name="size" value="s" checked hidden id="s-size">
             <label for="s-size" class="size-radio-btn check">s</label>
             <input type="radio" name="size" value="m" hidden id="m-size">
@@ -41,6 +41,7 @@
             <label for="xl-size" class="size-radio-btn">xl</label>
             <input type="radio" name="size" value="xxl" hidden id="xxl-size">
             <label for="xxl-size" class="size-radio-btn">xxl</label>
+          </div>
 
             <button class="btn cart-btn">Adicionar ao carrinho</button>
             <button class="btn">adicionar a lista de desejos</button>
