--- a/views/search.ejs
+++ b/views/search.ejs
@@ -13,152 +13,129 @@
     <nav class="navbar"></nav>
 
     <section class="search-results">
-        <h2 class="heading">search results for <span>product</span></h2>
+        <h2 class="heading">Resultados de pesquisa para <span>produtos</span></h2>
         <div class="product-container">
             <div class="product-card">
                 <div class="product-image">
-                    <span class="discount-tag">50% off</span>
+                    <span class="discount-tag"></span>
                     <img src="./img/card1.png" class="product-thumb" alt="">
-                    <button class="card-btn">add to whish list</button>
+                    <button class="card-btn">adicionar à lista de desejos</button>
                 </div>
                 <div class="product-info">
-                    <h2 class="product-brand">brand</h2>
-                    <p class="product-short-des">a short line about the cloth...</p>
-                    <span class="price">$20</span><span class="actual-price">$40</span>
+                    <h2 class="product-brand">Daslu</h2>
+                    <p class="product-short-des">Vestido Primavera...</p>
+                    <span class="price">R$160,00</span><span class="actual-price"></span>
                 </div>
             </div>
             <div class="product-card">
                 <div class="product-image">
-                    <span class="discount-tag">50% off</span>
+                    <span class="discount-tag">20% off</span>
                     <img src="./img/card2.png" class="product-thumb" alt="">
-                    <button class="card-btn">add to whish list</button>
+                    <button class="card-btn">adicionar à lista de desejos</button>
                 </div>
                 <div class="product-info">
-                    <h2 class="product-brand">brand</h2>
-                    <p class="product-short-des">a short line about the cloth...</p>
-                    <span class="price">$20</span><span class="actual-price">$40</span>
+                    <h2 class="product-brand">Clothing Man</h2>
+                    <p class="product-short-des">Conjunto de calça e camiseta </p>
+                    <span class="price">R$240,00</span><span class="actual-price">R$60,00</span>
+                </div>
+            </div>
+          
+            <div class="product-card">
+                <div class="product-image">
+                    <span class="discount-tag">20% off</span>
+                    <img src="/img/camisaFemFaces.webp" class="product-thumb" alt="">
+                    <button class="card-btn">adicionar à lista de desejos</button>
+                </div>
+                <div class="product-info">
+                    <h2 class="product-brand">Camiseta Fem</h2>
+                    <p class="product-short-des">camiseta Faces</p>
+                    <span class="price">R$96,00</span><span class="actual-price">R$24,00</span>
                 </div>
             </div>
             <div class="product-card">
                 <div class="product-image">
-                    <span class="discount-tag">50% off</span>
-                    <img src="./img/card3.png" class="product-thumb" alt="">
-                    <button class="card-btn">add to whish list</button>
+                    <span class="discount-tag">20% off</span>
+                    <img src="/img/camisetaFem.webp" class="product-thumb" alt="">
+                    <button class="card-btn">adicionar à lista de desejos</button>
                 </div>
                 <div class="product-info">
-                    <h2 class="product-brand">brand</h2>
-                    <p class="product-short-des">a short line about the cloth...</p>
-                    <span class="price">$20</span><span class="actual-price">$40</span>
+                    <h2 class="product-brand">Camiseta Fem </h2>
+                    <p class="product-short-des">Feminino </p>
+                    <span class="price">R$96,00</span><span class="actual-price">R$24,00</span>
                 </div>
             </div>
             <div class="product-card">
                 <div class="product-image">
-                    <span class="discount-tag">50% off</span>
-                    <img src="./img/card4.png" class="product-thumb" alt="">
-                    <button class="card-btn">add to whish list</button>
-                </div>
-                <div class="product-info">
-                    <h2 class="product-brand">brand</h2>
-                    <p class="product-short-des">a short line about the cloth...</p>
-                    <span class="price">$20</span><span class="actual-price">$40</span>
-                </div>
-            </div>
-            <div class="product-card">
-                <div class="product-image">
-                    <span class="discount-tag">50% off</span>
-                    <img src="./img/card5.png" class="product-thumb" alt="">
-                    <button class="card-btn">add to whish list</button>
-                </div>
-                <div class="product-info">
-                    <h2 class="product-brand">brand</h2>
-                    <p class="product-short-des">a short line about the cloth...</p>
-                    <span class="price">$20</span><span class="actual-price">$40</span>
-                </div>
-            </div>
-            <div class="product-card">
-                <div class="product-image">
-                    <span class="discount-tag">50% off</span>
-                    <img src="./img/card6.png" class="product-thumb" alt="">
-                    <button class="card-btn">add to whish list</button>
-                </div>
-                <div class="product-info">
-                    <h2 class="product-brand">brand</h2>
-                    <p class="product-short-des">a short line about the cloth...</p>
-                    <span class="price">$20</span><span class="actual-price">$40</span>
-                </div>
-            </div>
-            <div class="product-card">
-                <div class="product-image">
-                    <span class="discount-tag">50% off</span>
-                    <img src="./img/card7.png" class="product-thumb" alt="">
-                    <button class="card-btn">add to whish list</button>
-                </div>
-                <div class="product-info">
-                    <h2 class="product-brand">brand</h2>
-                    <p class="product-short-des">a short line about the cloth...</p>
-                    <span class="price">$20</span><span class="actual-price">$40</span>
-                </div>
-            </div>
-            <div class="product-card">
-                <div class="product-image">
-                    <span class="discount-tag">50% off</span>
-                    <img src="./img/card8.png" class="product-thumb" alt="">
-                    <button class="card-btn">add to whish list</button>
-                </div>
-                <div class="product-info">
-                    <h2 class="product-brand">brand</h2>
-                    <p class="product-short-des">a short line about the cloth...</p>
-                    <span class="price">$20</span><span class="actual-price">$40</span>
-                </div>
-            </div>
-            <div class="product-card">
-                <div class="product-image">
-                    <span class="discount-tag">50% off</span>
+                    <span class="discount-tag">10% off</span>
                     <img src="./img/card9.png" class="product-thumb" alt="">
-                    <button class="card-btn">add to whish list</button>
+                    <button class="card-btn">adicionar á lista de desejost</button>
                 </div>
                 <div class="product-info">
-                    <h2 class="product-brand">brand</h2>
-                    <p class="product-short-des">a short line about the cloth...</p>
-                    <span class="price">$20</span><span class="actual-price">$40</span>
+                    <h2 class="product-brand">Nike Shoes lx</h2>
+                    <p class="product-short-des">Run Black</p>
+                    <span class="price">R$360,00</span><span class="actual-price">R$40</span>
                 </div>
             </div>
             <div class="product-card">
                 <div class="product-image">
                     <span class="discount-tag">50% off</span>
-                    <img src="./img/card10.png" class="product-thumb" alt="">
-                    <button class="card-btn">add to whish list</button>
+                    <span class="discount-tag">10% off</span>
+                    <img src="/img/boné bronx.jpeg" class="product-thumb" alt="">
+                    <button class="card-btn">adicionar à lista de desejo</button>
                 </div>
                 <div class="product-info">
-                    <h2 class="product-brand">brand</h2>
-                    <p class="product-short-des">a short line about the cloth...</p>
-                    <span class="price">$20</span><span class="actual-price">$40</span>
+                    <h2 class="product-brand">boné Bronx</h2>
+                    <p class="product-short-des">boné cinza</p>
+                    <span class="price">R$180</span><span class="actual-price">R$20,00</span>
                 </div>
             </div>
+
             <div class="product-card">
                 <div class="product-image">
-                    <span class="discount-tag">50% off</span>
-                    <img src="./img/card11.png" class="product-thumb" alt="">
-                    <button class="card-btn">add to whish list</button>
+                    <span class="discount-tag"></span>
+                    <img src="/img/RELOGIO-MASC-AVULSO-COPC32CZ-7D-DOU-10052073397-C1.webp" class="product-thumb" alt="">
+                    <button class="card-btn">adicionar a lista de desejos</button>
                 </div>
                 <div class="product-info">
-                    <h2 class="product-brand">brand</h2>
-                    <p class="product-short-des">a short line about the cloth...</p>
-                    <span class="price">$20</span><span class="actual-price">$40</span>
+                    <h2 class="product-brand">Relógio</h2>
+                    <p class="product-short-des">Relógio Masc Mondane</p>
+                    <span class="price">R$320,00</span><span class="actual-price"></span>
                 </div>
-            </div>
+
+
             <div class="product-card">
                 <div class="product-image">
-                    <span class="discount-tag">50% off</span>
-                    <img src="./img/card12.png" class="product-thumb" alt="">
-                    <button class="card-btn">add to whish list</button>
+                    <span class="discount-tag"></span>
+                    <img src="/img/JAQUETA-C-CAPUZ-DE-MOLETOM-MOLI-PTO-M-10051840679-C1.webp" class="product-thumb" alt="">
+                    <button class="card-btn">adicionar a lista de desejost</button>
                 </div>
                 <div class="product-info">
-                    <h2 class="product-brand">brand</h2>
-                    <p class="product-short-des">a short line about the cloth...</p>
-                    <span class="price">$20</span><span class="actual-price">$40</span>
+                    <h2 class="product-brand">Jaqueta</h2>
+                    <p class="product-short-des">Jaqueta com Capuz Preta </p>
+                    <span class="price">R$220,00</span><span class="actual-price"></span>
+                </div>
+
+
+            <div class="product-card">
+                <span class="discount-tag">15% off</span>
+                    <img src="/img/camisetaMascK.jpeg" class="product-thumb" alt="">
+                    <button class="card-btn">adicionar à lista de desejo</button>
+                </div>
+                <div class="product-info">
+                    <h2 class="product-brand">Camiseta Kids</h2>
+                    <p class="product-short-des">Camiseta masc </p>
+                    <span class="price">R$85,00</span><span class="actual-price">R$15,00</span>
                 </div>
             </div>
+            
+            
+            
+                    
+                </div>
+              </div>
+           
+            </div>
+        </div> 
         </div>
     </section>
 
