--- a/public/css/404.css
+++ b/public/css/404.css
@@ -1,14 +1,21 @@
-.four-0-four-image{
+.four-0-four-image {
     display: block;
     margin: 60px auto;
 }
 
-.four-0-four-msg{
+.four-0-four-msg {
     text-align: center;
     text-transform: capitalize;
     color: #383838;
 }
 
-.four-0-four-msg a{
+.four-0-four-msg a {
     color: #383838;
+}
+
+/* Smartphones */
+@media (min-width:375px) and (max-width:767px) {
+    .four-0-four-image {
+        width: 90%;
+    }
 }
