--- a/public/css/product.css
+++ b/public/css/product.css
@@ -134,3 +134,110 @@
     color: #383838;
     line-height: 25px;
 }
+
+/* Smartphones */
+@media (min-width:375px) and (max-width:767px) {
+
+    .hero-section {
+        width: 100%;
+
+    }
+
+    .product-details {
+        width: 100%;
+        padding: 50px 8vw;
+        display: flex;
+        flex-direction: column;
+
+    }
+
+    .image-slider {
+        width: 300px;
+        height: 300px;
+        position: relative;
+        background-image: url('../img/productImage1.png');
+        background-size: cover;
+    }
+
+    .details .product-brand {
+        text-transform: capitalize;
+        font-size: 16px;
+    }
+
+    .details .product-short-des {
+        font-size: 10px;
+        line-height: 12px;
+        height: auto;
+        margin: 10px 5px 15px;
+    }
+
+    .product-price {
+        font-weight: 200;
+        font-size: 18px;
+    }
+
+    .product-actual-price {
+        font-size: 9px;
+        opacity: 0.5;
+        text-decoration: line-through;
+        margin: 0 20px;
+        font-weight: 100;
+    }
+
+    .product-discount {
+        color: #ff7d7d;
+        font-size: 10px;
+    }
+
+    .product-sub-heading {
+        font-size: 10px;
+        text-transform: uppercase;
+        margin: 25px 0 10px;
+        font-weight: 300;
+    }
+
+    .size-radio-btn {
+        display: flex;
+        flex-direction: row;
+        align-items: right;
+        width: 48px;
+        height: 50px;
+        font-size: 21px;
+        margin: 15px 7px 30px -4px;
+        border: 1px solid #383838;
+        border-radius: 50%;
+        line-height: 78px;
+        text-transform: uppercase;
+
+
+
+    }
+
+    .size-group {
+        width: 200%;
+        height: 30%;
+        display: flex;
+        flex-direction: row;
+        margin: 25px 9px 8px 5px;
+    }
+
+    .cart-btn {
+        width: 100%;
+        display: flex;
+        justify-items: center;
+        background: #383838;
+        color: #fff;
+    }
+
+    button.btn {
+        width: 100%;
+        margin-right: 2%;
+
+    }
+
+    .heading {
+        font-size: 20px;
+        margin-bottom: 20px;
+    }
+
+}
