--- a/public/css/search.css
+++ b/public/css/search.css
@@ -1,10 +1,12 @@
 /* SEARCH */
-.search-results{
+
+
+.search-results {
     width: 100%;
     padding: 60px 0;
 }
 
-.heading{
+.heading {
     font-size: 20px;
     text-transform: capitalize;
     font-weight: 400;
@@ -12,14 +14,44 @@
     padding: 0 10vw;
 }
 
-.heading span{
+.heading span {
     font-weight: 700;
 }
+
 /* END SEARCH */
 
-.product-container{
+.product-container {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     height: auto;
     grid-row-gap: 40px;
+}
+
+/* Smartphones */
+@media (min-width:375px) and (max-width:767px) {
+
+    .search-results {
+        width: 100%;
+        padding: 10px 0px;
+
+    }
+
+
+    .heading span {
+        font-weight: 500;
+    }
+
+    /* END SEARCH */
+
+    .product-container {
+        display: block;
+        align-items: center;
+        height: auto;
+        margin-left: 25px;
+
+    }
+
+    .product-card {
+        align-items: center;
+    }
 }
