--- a/views/product.ejs
+++ b/views/product.ejs
@@ -31,16 +31,13 @@
 
             <p class="product-sub-heading">selecione o tamanho</p>
          <div class="size-group">
-            <input type="radio" name="size" value="s" checked hidden id="s-size">
-            <label for="s-size" class="size-radio-btn check">s</label>
+            <input type="radio" name="size" value="P" checked hidden id="s-size">
+            <label for="s-size" class="size-radio-btn check">P</label>
             <input type="radio" name="size" value="m" hidden id="m-size">
             <label for="m-size" class="size-radio-btn">m</label>
-            <input type="radio" name="size" value="l" hidden id="l-size">
-            <label for="l-size" class="size-radio-btn">l</label>
-            <input type="radio" name="size" value="xl" hidden id="xl-size">
-            <label for="xl-size" class="size-radio-btn">xl</label>
-            <input type="radio" name="size" value="xxl" hidden id="xxl-size">
-            <label for="xxl-size" class="size-radio-btn">xxl</label>
+            <input type="radio" name="size" value="G" hidden id="l-size">
+            <label for="l-size" class="size-radio-btn">g</label>
+          
           </div>
 
             <button class="btn cart-btn">Adicionar ao carrinho</button>
