--- a/public/css/product.css
+++ b/public/css/product.css
@@ -209,8 +209,10 @@
     }
 
     .size-group label {
-        width: 19%;
-        max-height: 1%;
+        width: 40px;
+        height: 40px;
+        justify-content: center;
+
         display: flex;
         flex-direction: row;
         align-items: center;
