--- a/public/css/signup.css
+++ b/public/css/signup.css
@@ -29,16 +29,15 @@ body {
     margin: 0 auto 50px;
 }
 
-input[type="text"],
-input[type="password"],
-input[type="email"] {
+input:not(.search-box, .checkbox, .size-checkbox, input[type="file"]),
+textarea {
     display: block;
     width: 300px;
     height: 40px;
     padding: 20px;
     border-radius: 5px;
     background: #fff;
-    border: none;
+    border: 2px solid #383838;
     outline: none;
     margin: 20px 0;
     text-transform: capitalize;
